--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,8 @@ version: '3'
 volumes:
   pg_data:
 
+  static:
+
 # Перечень контейнеров
 services:
   # Имя и описание первого контейнера; имя выбирает разработчик. 
@@ -22,6 +24,9 @@ services:
     # Из какого Dockerfile собирать образ для этого контейнера:
     build: ./backend/
     env_file: .env
+    # Подключаем volume к backend
+    volumes:
+      - static:/backend_static
     # Какие контейнеры нужно запустить до старта этого контейнера:
     depends_on:
       - db
@@ -29,13 +34,20 @@ services:
   frontend:
     env_file: .env
     build: ./frontend/
+    command: cp -r /app/build/. /frontend_static/
+    # Подключаем volume к frontend
+    volumes:
+      - static:/frontend_static
   # Имя четвертого контейнера. Это контейнер с nginx
   gateway:
     # Сбилдить и запустить образ, 
     # описанный в Dockerfile в папке gateway
     build: ./gateway/
+    # Подключаем volume со статикой к gateway
+    volumes:
+      - static:/staticfiles/
     # Ключ ports устанавливает
     # перенаправление всех запросов с порта 8000 хоста
     # на порт 80 контейнера.
     ports:
-      - 8000:80 
+      - 8000:80
